--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
