--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGO_URL=mongodb+srv://username:a3smHVeZzBLx9HKn@opus.mlgrbwf.mongodb.net/?retryWrites=true&w=majority&appName=Opus
+JWT_SECRET=4234452423
