--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.6",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.22",
     "react": "^18.3.1",
